--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 </head>
 
 <body>
-    <video class="bg_video" src="/images/Nature.mp4" loop muted autoplay></video>
+    <video class="bg_video" src="images/Nature.mp4" loop muted autoplay></video>
     <!-- Page container -->
     <div class="container page">
         <!-- header section -->
